# ASUP-Agent

./: .gitignore  AGENTS.md  README.md
.cursor/rules/: asup-rca-agent.mdc
asup_agent/: pyproject.toml
asup_agent/fixtures/demo/: asup_summary.json  ems_events.json  harvest_anomalies.json
asup_agent/src/asup_agent/: agent.py  cli.py  credentials.py
asup_agent/src/asup_agent/parser/: archive.py  statit.py  syslog.py  wafl.py
asup_agent/src/asup_agent/rca/: correlator.py  hypotheses.py  workflow.py
config/: mcp.json.example
ontap_mcp/: pyproject.toml
ontap_mcp/src/ontap_mcp/: client.py  guardrails.py  server.py  tool_schemas.py
ontap_mcp/src/ontap_mcp/tools/: autosupport.py  ems.py  fetch_ems_logs.py  parse_asup_bundle.py  run_active_diagnostic.py  search_storage_kb.py  volumes.py
prompts/: rca_system.md
