[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontap-mcp"
version = "0.1.0"
description = "MCP server for ONTAP REST operations — EMS, volumes, AutoSupport"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "paramiko>=3.4.0",
    "py7zr>=0.21.0",
]

[project.scripts]
ontap-mcp = "ontap_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ontap_mcp"]
